--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">운동장</string>
     <string-array name="main_list">
         <item>ViewModel</item>
+        <item>BitmapCombine</item>
     </string-array>
 </resources>
